--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>three.js ar - hit test</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-		<link type="text/css" rel="stylesheet" href="main.css">
+		<link type="text/css" rel="stylesheet" href="./main.css">
 	</head>
 	<body>
 
@@ -16,18 +16,12 @@
 		<!-- Remove this when import maps will be widely supported -->
 		<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
 
-		<script type="importmap">
-			{
-				"imports": {
-					"three": "../build/three.module.js"
-				}
-			}
-		</script>
+        <script type ="module" src="./three.module.js"></script>
+        <script type ="module" src="./three.min.js"></script>
+        
 
 		<script type="module">
-
-			import * as THREE from 'three';
-			import { ARButton } from './ARButton.js';
+            import { ARButton } from './ARButton.js';
 
 			let container;
 			let camera, scene, renderer;
@@ -74,7 +68,7 @@
 
 					if ( reticle.visible ) {
 
-						const material = new THREE.MeshPhongMaterial( { color: 0xffffff * Math.random() } );
+						const material = new THREE.MeshPhongMaterial( { color: 'blue' } );
 						const mesh = new THREE.Mesh( geometry, material );
 						mesh.position.setFromMatrixPosition( reticle.matrix );
 						mesh.scale.y = Math.random() * 2 + 1;
@@ -136,7 +130,7 @@
 
 							} );
 
-						} );
+						} ); 
 
 						session.addEventListener( 'end', function () {
 
